remove css files from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@ node_modules/
 
 # Tailwind CSS output
 dist/
-build/
-*.css
-!src/styles.css  # Include your source CSS file if needed
+build/ # Include your source CSS file if needed
 
 # Optional: OS and IDE-specific files
 .DS_Store
